# prayertimes

./: .gitignore  .travis.yml  README.md  README.rst  pyproject.toml  setup.py
prayertimes/: prayertimes.py
tests/: test_main.py  tests.py
